Meta repository for NachOS

--- a/cv.tex
+++ b/cv.tex
@@ -318,18 +318,15 @@
     {Monsoon 2013-2014}
     {NachOS}
     {\textsc{Operating Systems}, Professor Mainak Chaudhari}
-    {\href{https://github.com/srijanshetty/} {[GitHub]} }
+    {\href{https://github.com/srijanshetty/nachos} {[GitHub]} }
     {
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
                 Join, Yield, Sleep and Exit.
-                \href{https://github.com/srijanshetty/nachos-syscalls/}{[https://github.com/srijanshetty/nachos-syscalls]}
             \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
                 Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-                \href{https://github.com/srijanshetty/nachos-scheduling}{[https://github.com/srijanshetty/nachos-scheduling]}
             \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
                 Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-                \href{https://github.com/srijanshetty/nachos-final}{[https://github.com/srijanshetty/nachos-final]}
         \end{itemize}
     }
 
