--- a/cv.tex
+++ b/cv.tex
@@ -217,6 +217,12 @@
 \def\arraystretch{1}
 
 %----------------------------------------------------------------------------------------
+%	TEACHING
+%----------------------------------------------------------------------------------------
+
+% \section{Teaching}
+
+%----------------------------------------------------------------------------------------
 %   WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
 
@@ -272,12 +278,35 @@
     }
 
 %----------------------------------------------------------------------------------------
-%  COURSE PROJECTS
+%   Awards and Achievements
+%----------------------------------------------------------------------------------------
+\section{Awards and Achievements}
+
+\itemlist {
+    \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
+    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
+                                    \textbf{Systems and Network Security};
+                                    \textbf{Computer Networks};
+                                    \textbf{Computer Organization};
+                                    \textbf{Logic for Computer Science};
+                                    \textbf{Fundamentals of Computing};
+                                    \textbf{Introduction to Philosophy} \\
+    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
+    \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
+    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
+    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at Advanced Materials Research Institute, Bhopal\\
+}
+
+
+%----------------------------------------------------------------------------------------
+%  PROJECTS
 %----------------------------------------------------------------------------------------
 \vspace{-0.65cm}
 \let\thefootnote\relax\footnote{Monsoon semester: July to November}
 \let\thefootnote\relax\footnote{Winter Semester: January to April}
-\section{Course Projects}
+\section{Projects}
 
 \cproject
     {Winter 2013-2014}
@@ -368,18 +397,17 @@
         \end{itemize}
     }
 
-% \cproject
-%     {Winter 2012-2013}
-%     {Conference Dates Web Crawler}
-%     {\textsc{Computing Laboratory}}
-%     {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
-%     {
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
-%                 using BeautifulSoup and urllib.
-%                 \href{https://github.com/srijanshetty/crawler} { [https://github.com/srijanshetty/crawler] }
-%         \end{itemize}
-%     }
+\cproject
+    {Winter 2012-2013}
+    {Conference Dates Web Crawler}
+    {\textsc{Computing Laboratory}}
+    {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
+                using BeautifulSoup and urllib.
+        \end{itemize}
+    }
 
 %----------------------------------------------------------------------------------------
 %  INDEPENDENT PROJECTS
@@ -444,45 +472,10 @@
     }
 
 %----------------------------------------------------------------------------------------
-%   SCHOLASTIC ACHIEVEMENTS
-%----------------------------------------------------------------------------------------
-\section{Scholastic Achievements, Scholarships and Conferences}
-
-\itemlist {
-    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
-                                    \textbf{Systems and Network Security};
-                                    \textbf{Computer Networks};
-                                    \textbf{Computer Organization};
-                                    \textbf{Logic for Computer Science};
-                                    \textbf{Fundamentals of Computing};
-                                    \textbf{Introduction to Philosophy} \\
-    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
-    \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
-    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
-    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at Advanced Materials Research Institute, Bhopal\\
-}
-
-%----------------------------------------------------------------------------------------
 %   OTHER SKILLS
 %----------------------------------------------------------------------------------------
 
-\section {Leadership and Artistic Skills}
-
-\skill {\href{srijanshetty.quora.com} {[Blog]}}
-       {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
-
-\gitproject
-    {\href{https://github.com/navya} {\small{[Site]}}}
-    {Hacker, Navya, FOSS Group IIT Kanpur}
-    {
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
-            \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
-                their legacy institute counterparts.
-        \end{itemize}
-    }
+\section {Leadership Skills}
 
 \gitproject
     {2014 - 2015}
@@ -574,5 +567,29 @@
 \skill
     {2012 -- 2013}
     {Academic Mentor, Fundamentals of Computing, Professor Sumit Ganguly}
+
+%----------------------------------------------------------------------------------------
+%   EXTRA-CURRICULAR ACTIVITIES
+%----------------------------------------------------------------------------------------
+
+\section{Extra-Curricular Activities}
+
+\skill {\href{srijanshetty.quora.com} {[Blog]}}
+       {Sporadic blogger at \href{srijanshetty.in} {srijanshetty.in}}
+
+\gitproject
+    {\href{https://github.com/navya} {\small{[Site]}}}
+    {Hacker, Navya, FOSS Group IIT Kanpur}
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
+            \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
+                their legacy institute counterparts.
+        \end{itemize}
+    }
+
+\skill
+    {\href{https://github.com/srijanshetty} {\small{[GitHub]}}}
+    {Active contributor to numerous open source projects}
 
 \end{document}
