--- a/cv.tex
+++ b/cv.tex
@@ -65,13 +65,13 @@
 \newcommand{\headspace}{-0.3cm}
 \newcommand{\bulletspace}{0.7cm}
 
-\newcommand{\highlight}[2]{
+\newcommand{\highlight}[2]{%
     \begin{tabular}{p{2.4cm}|l}
         \textsc {\large #1} & #2
     \end{tabular}
 }
 
-\newcommand{\cproject}[5]{
+\newcommand{\cproject}[5]{%
     \begin{tabular}{p{0.60\linewidth}r}
         \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{7.3cm}}{\raggedleft \small {\textsc{#1}}}\\
         \small {#3} & \small {#4}
@@ -83,7 +83,7 @@
     \vspace{\verticalspacing{}}
 }
 
-\newcommand{\gitproject}[3]{
+\newcommand{\gitproject}[3]{%
     \begin{tabular}{p{0.60\linewidth}r}
         \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{7.3cm}}{\raggedleft #1}\\
     \end{tabular}
@@ -95,14 +95,14 @@
     \vspace{-0.2cm} % Needed for proper spacing
 }
 
-\newcommand{\projectlist}[2]{
+\newcommand{\projectlist}[2]{%
     \vspace{0.2cm}
     \begin{tabular}{p{3cm}|p{17.5cm}}
         \textcolor{NavyBlue}{#1} & \footnotesize{#2}\\
     \end{tabular}
 }
 
-\newcommand{\itemlist}[1]{
+\newcommand{\itemlist}[1]{%
     \def\arraystretch{1.2}
     \begin{tabular}{>{\raggedleft}p{1.6cm}p{0.87\linewidth}}
         #1
@@ -110,14 +110,14 @@
     \def\arraystretch{1.0}
 }
 
-\newcommand{\skill}[2]{
+\newcommand{\skill}[2]{%
     \begin{tabular}{p{0.60\linewidth}r}
         \small {#2} & \multicolumn{1}{m{7.3cm}}{\raggedleft \textsc{\small #1}}\\
     \end{tabular}
     \vspace{\verticalspacing{}}
 }
 
-\newcommand{\github}{
+\newcommand{\github}{%
     \includegraphics[height=9pt]{icons/octa.png}
 }
 
@@ -127,7 +127,7 @@
 
 \begin{document}
 
-\font\fb=''[cmr10]'' % Change the font of the \LaTeX command under the skills section
+% \font\fb=''[cmr10]'' % Change the font of the \LaTeX command under the skills section
 
 \titleformat{\section}{\large\scshape\raggedright}{}{0em}{}[\titlerule] % Section formatting
 
@@ -135,15 +135,15 @@
 % HEADER SECTION
 %----------------------------------------------------------------------------------------
 
-{
+{%
     \begin{tabular}{rp{6cm}l}
-        \multirow{3}{0.70\linewidth}{
+        \multirow{3}{0.70\linewidth}{%
             \vfil
-            {
+            {%
                 \addfontfeature{LetterSpace=20.0}\fontsize{20}{20}\selectfont\scshape
                 Srijan R. Shetty
             }\\
-            \emph{Senior Undergraduate, Dept. of Computer Science and Engineering}
+            \emph{Senior Undergraduate, Dept of Computer Science and Engineering}
         }
 
         & {\Large\Letter} {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}\\
@@ -165,8 +165,8 @@
 %----------------------------------------------------------------------------------------
 \highlight
     {Skill Set}
-    {
-        \itemlist {
+    {%
+        \itemlist {%
                 \textsc{\small Languages} %
                 & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient),
                 \textbf{C} (Proficient), \textbf{R} (Intermediate)\\
@@ -232,7 +232,7 @@
     {Multi Factor Authentication in OpenVPN}
     {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder, Professor Dheeraj Sanghi}
     {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
           \item One of the \textbf{eleven} teams all over the \textbf{world} to be selected as a part of Mozilla's Winter of Security Initiative 2014.
           \item The objective of the project was to implement true \textbf{arbitrary multi-factor authentication} support in
@@ -249,7 +249,7 @@
       {Research Intern}
       {\textsc{Microsoft Research India}, Bangalore}
       {}
-      {
+      {%
           \begin{itemize}[leftmargin=\bulletspace{}]
               \item Analysed the implementations of different distributed systems and databases architectures like
                   \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
@@ -267,7 +267,7 @@
     {Software Development Intern}
     {\textsc{Aurus Networks'}, Bangalore}
     {}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks'
                 MOOC offering --- to a technology agnostic \textbf{HTML5/JavaScript} web player leading
@@ -282,7 +282,7 @@
 %----------------------------------------------------------------------------------------
 \section{Awards and Achievements}
 
-\itemlist {
+\itemlist {%
     \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
     \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
                                     \textbf{Systems and Network Security};
@@ -312,8 +312,8 @@
     {Winter 2013-2014}
     {JavaScript to MIPS Compiler}
     {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]} }
-    {
+    {\href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]}}
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
                 functions, anonymous functions, static types, type annotations, recursion and nested functions.
@@ -324,8 +324,8 @@
     {Winter 2013-2014}
     {Hindi author attribution}
     {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
-    { \href{https://github.com/srijanshetty/author-attribution} {[GitHub]} }
-    {
+    {\href{https://github.com/srijanshetty/author-attribution} {[GitHub]}}
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
                 Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
@@ -345,8 +345,8 @@
     {Monsoon 2013-2014}
     {NachOS}
     {\textsc{Operating Systems}, Professor Mainak Chaudhari}
-    {\href{https://github.com/srijanshetty/nachos} {[GitHub]} }
-    {
+    {\href{https://github.com/srijanshetty/nachos} {[GitHub]}}
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
                 Join, Yield, Sleep and Exit.
@@ -361,11 +361,11 @@
     {Monsoon 2013-2014}
     {P2P File Sharing and Streaming and IP Spoofing}
     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-    { \href{https://github.com/srijanshetty/nodesock} {[GitHub]} }
-    {
+    {\href{https://github.com/srijanshetty/nodesock} {[GitHub]}}
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-                data over any LAN.  \href{https://github.com/srijanshetty/nodesock} {[https://github.com/srijanshetty/nodesock]}
+                data over any LAN.
             \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
                 Smurfing and SYN Flooding.
         \end{itemize}
@@ -387,8 +387,8 @@
     {Winter 2012-2013}
     {8-bit General Purpose Computer on a FPGA}
     {\textsc{Computer Organization}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/220\_y11} {[GitHub]} }
-    {
+    {\href{https://github.com/srijanshetty/220\_y11} {[GitHub]}}
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
                 Purpose Computer with a \textbf{load-store}
@@ -401,8 +401,8 @@
     {Winter 2012-2013}
     {Conference Dates Web Crawler}
     {\textsc{Computing Laboratory}}
-    {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
-    {
+    {\href{https://github.com/srijanshetty/crawler} {[GitHub]}}
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
                 using BeautifulSoup and urllib.
@@ -419,7 +419,7 @@
     {GNU/Linux Exploration}
     {Programming Club, IIT Kanpur}
     {\href{http://bit.ly/pclubLinux}{\small{[Wiki]}}}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
                 process management, memory management, shell interface etc to serve as a reference for the
@@ -432,7 +432,7 @@
     {VS-3, Electronic Voting}
     {Election Council, IIT Kanpur}
     {\href{https://github.com/srijanshetty/elections} {\small{[GitHub]}}}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
                 to facilitate smooth electonic voting in the campus.
@@ -444,7 +444,7 @@
 \gitproject
     {\href{https://navya.github.io/oars} {\small{[Site]}}}
     {OARS}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
                 institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
@@ -454,7 +454,7 @@
 \gitproject
     {\href{http://gyph2.herokuapp.com/template1} {\small{[Site]}}}
     {GYPH}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item GYPH or Get Your Personal Homepage, eases the process of creating minimalistic websites for students
             by providing a WYSIWYG website creator.\textbf{editor.}
@@ -462,9 +462,9 @@
     }
 
 \gitproject
-    {\href{https://github.com/srijanshetty/ShuffleRun} {\small{[GitHub]}}}
+    {\href{https://github.com/srijanshetty/shufflerun} {\small{[GitHub]}}}
     {ShuffleRun}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
                 running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
@@ -480,7 +480,7 @@
 \gitproject
     {2014 - 2015}
     {Chief Election Officer, Election Council, IIT Kanpur}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Conducted General Elections, Student's Gymkhana 2014 and
                 Girls Representative Elections, Students' Gymkhana 2014.
@@ -491,7 +491,7 @@
 \gitproject
     {2014 - 2015}
     {Head, Major Events and Competitions, Antaragni '14}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
                 prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
@@ -511,7 +511,7 @@
 \gitproject
     {2013 -- 2014}
     {Hospitality Coordinator, Antaragni '13}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Managed a team of \textbf{40 secretaries and 80 volunteers}, over a span of 8 months and ensured a
                 flawless conduction of the festival.
@@ -542,7 +542,7 @@
 \gitproject
     {2014 -- 2015}
     {Member, Institute Anti Ragging Committee}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Appointed as a member of the Institute Anti Ragging Committee, \textbf{a 10 member committee} responsible
                 for welfare of the newly admitted freshmen.
@@ -557,7 +557,7 @@
     {Tutor, English Proficiency Programme}
     {Professor Bhaskar Das Gupta}
     {}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
                 \textbf{under-privileged students} obtain a functional knowlege of English.
@@ -580,7 +580,7 @@
 \gitproject
     {\href{https://github.com/navya} {\small{[Site]}}}
     {Hacker, Navya, FOSS Group IIT Kanpur}
-    {
+    {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
             \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
