only the important course projects are mentioned

--- a/cv.tex
+++ b/cv.tex
@@ -351,19 +351,19 @@
         \end{itemize}
     }
 
-\cproject
-    {Monsoon 2013-2014}
-    {P2P File Sharing and Streaming and IP Spoofing}
-    {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-    {\href{https://github.com/srijanshetty/nodesock} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-                data over any LAN.
-            \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
-                Smurfing and SYN Flooding.
-        \end{itemize}
-    }
+% \cproject
+%     {Monsoon 2013-2014}
+%     {P2P File Sharing and Streaming and IP Spoofing}
+%     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
+%     {\href{https://github.com/srijanshetty/nodesock} {[GitHub]}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
+%                 data over any LAN.
+%             \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
+%                 Smurfing and SYN Flooding.
+%         \end{itemize}
+%     }
 
 % \cproject
 %     {Monsoon 2013-2014}
@@ -391,17 +391,17 @@
         \end{itemize}
     }
 
-\cproject
-    {Winter 2012-2013}
-    {Conference Dates Web Crawler}
-    {\textsc{Computing Laboratory}}
-    {\href{https://github.com/srijanshetty/crawler} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
-                using BeautifulSoup and urllib.
-        \end{itemize}
-    }
+% \cproject
+%     {Winter 2012-2013}
+%     {Conference Dates Web Crawler}
+%     {\textsc{Computing Laboratory}}
+%     {\href{https://github.com/srijanshetty/crawler} {[GitHub]}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
+%                 using BeautifulSoup and urllib.
+%         \end{itemize}
+%     }
 
 %----------------------------------------------------------------------------------------
 %  INDEPENDENT PROJECTS
