Full forms of Independent Projects

--- a/cv.tex
+++ b/cv.tex
@@ -450,7 +450,7 @@
 
 \gitproject
     {\href{https://navya.github.io/oars} {\small{[Site]}}}
-    {OARS}
+    {OARS - Institute Course Search}
     {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
@@ -460,7 +460,7 @@
 
 \gitproject
     {\href{http://gyph2.herokuapp.com/template1} {\small{[Site]}}}
-    {GYPH}
+    {GYPH - Get Your Personal Homepage}
     {%
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item GYPH or Get Your Personal Homepage, eases the process of creating minimalistic websites for students
