--- a/cv.tex
+++ b/cv.tex
@@ -222,6 +222,14 @@
 
 \section{Work Experience}
 \cproject
+      {June 2015 - present}
+      {Analyst, Securities Division}
+      {\textsc{Goldman Sachs Services Private Limited}, Bangalore}
+      {}
+      {%
+      }
+
+\cproject
     {2014 - 2015}
     {Multi Factor Authentication in OpenVPN}
     {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder, Professor Dheeraj Sanghi}
