Remove nodesock, prolog, web-crawler, shufflerun, oars, gyph

--- a/cv.tex
+++ b/cv.tex
@@ -359,32 +359,6 @@
         \end{itemize}
     }
 
-% \cproject
-%     {Monsoon 2013-2014}
-%     {P2P File Sharing and Streaming and IP Spoofing}
-%     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-%     {\href{https://github.com/srijanshetty/nodesock} {[GitHub]}}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-%                 data over any LAN.
-%             \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
-%                 Smurfing and SYN Flooding.
-%         \end{itemize}
-%     }
-
-% \cproject
-%     {Monsoon 2013-2014}
-%     {Prolog Shortest Paths and Erlang Traffic Server}
-%     {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
-%     {}
-%     {
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
-%             \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
-%         \end{itemize}
-%     }
-
 \cproject
     {Winter 2012-2013}
     {8-bit General Purpose Computer on a FPGA}
@@ -399,22 +373,10 @@
         \end{itemize}
     }
 
-% \cproject
-%     {Winter 2012-2013}
-%     {Conference Dates Web Crawler}
-%     {\textsc{Computing Laboratory}}
-%     {\href{https://github.com/srijanshetty/crawler} {[GitHub]}}
-%     {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%             \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
-%                 using BeautifulSoup and urllib.
-%         \end{itemize}
-%     }
-
 %----------------------------------------------------------------------------------------
 %  INDEPENDENT PROJECTS
 %----------------------------------------------------------------------------------------
-\section{Independent Projects}
+% \section{Independent Projects}
 
 \cproject
     {Winter 2014-2015}
@@ -439,37 +401,6 @@
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Initiated the creation of VANI - an extensible community platform with applications
                 for forums, wikis, search, lost and found and calendars.
-        \end{itemize}
-    }
-
-\gitproject
-    {\href{https://navya.github.io/oars} {\small{[Site]}}}
-    {OARS - Institute Course Search}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
-                institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
-        \end{itemize}
-    }
-
-\gitproject
-    {\href{http://gyph2.herokuapp.com/template1} {\small{[Site]}}}
-    {GYPH - Get Your Personal Homepage}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item GYPH or Get Your Personal Homepage, eases the process of creating minimalistic websites for students
-            by providing a WYSIWYG website creator.\textbf{editor.}
-        \end{itemize}
-    }
-
-\gitproject
-    {\href{https://srijanshetty.in/shufflerun} {\small{[GitHub]}}}
-    {ShuffleRun}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
-                running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
-            \item A test version of ShuffleRun is active \href{https://srijanshetty.in/shufflerun} {here}
         \end{itemize}
     }
 
