--- a/cv.tex
+++ b/cv.tex
@@ -227,6 +227,9 @@
       {\textsc{Goldman Sachs Services Private Limited}, Bangalore}
       {}
       {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+          \item Trading Strat, Equity One Delta, Securities Division
+        \end{itemize}
       }
 
 \cproject
