--- a/cv.tex
+++ b/cv.tex
@@ -288,6 +288,9 @@
 \section{Awards and Achievements}
 
 \itemlist {%
+    \textsc{\small May 2015}    & Achieved a rank of \textbf{53} in
+                                  \href{https://www.kaggle.com/c/bike-sharing-demand/leaderboard}
+                                  {Kaggle's Bike Sharing Demand} Machine Learning Competition. \\
     \textsc{\small 2011-2015}   & Students' \textbf{Gymkhana Leadership Award}, IIT Kanpur. \\
     \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
                                     \textbf{Systems and Network Security};
