--- a/cv.tex
+++ b/cv.tex
@@ -304,7 +304,8 @@
     \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
     \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
-    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at Advanced Materials Research Institute, Bhopal\\
+    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
+                                  Advanced Materials Research Institute, Bhopal\\
 }
 
 
