I'll update this when needed

--- a/cv.tex
+++ b/cv.tex
@@ -219,18 +219,18 @@
 %----------------------------------------------------------------------------------------
 %   WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
-
-\section{Work Experience}
-\cproject
-      {June 2015 - present}
-      {Analyst, Securities Division}
-      {\textsc{Goldman Sachs Services Private Limited}, Bangalore}
-      {}
-      {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-          \item Trading Strat, Equity One Delta, Securities Division
-        \end{itemize}
-      }
+%
+% \section{Work Experience}
+% \cproject
+%       {June 2015 - present}
+%       {Analyst, Securities Division}
+%       {\textsc{Goldman Sachs Services Private Limited}, Bangalore}
+%       {}
+%       {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%           \item Trading Strat, Equity One Delta, Securities Division
+%         \end{itemize}
+%       }
 
 \cproject
     {2014 - 2015}
