Summer Intern, Klozee.

--- a/cv.tex
+++ b/cv.tex
@@ -220,7 +220,7 @@
 %   WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
 %
-% \section{Work Experience}
+\section{Work Experience}
 % \cproject
 %       {June 2015 - present}
 %       {Analyst, Securities Division}
@@ -231,6 +231,18 @@
 %           \item Trading Strat, Equity One Delta, Securities Division
 %         \end{itemize}
 %       }
+
+\cproject
+      {May - June 2015}
+      {Summer Intern}
+      {\textsc{Klozee.}, Bangalore}
+      {}
+      {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+          \item Automated developer operations by creating a heroku style push to deploy model on AWS.
+          \item Worked full stack on Express, Angular, Node and Angular to create a apparel store for the web app.
+        \end{itemize}
+      }
 
 \cproject
     {2014 - 2015}
