--- a/cv.tex
+++ b/cv.tex
@@ -221,16 +221,6 @@
 %----------------------------------------------------------------------------------------
 %
 \section{Work Experience}
-% \cproject
-%       {June 2015 - present}
-%       {Analyst, Securities Division}
-%       {\textsc{Goldman Sachs Services Private Limited}, Bangalore}
-%       {}
-%       {%
-%         \begin{itemize}[leftmargin=\bulletspace{}]
-%           \item Trading Strat, Equity One Delta, Securities Division
-%         \end{itemize}
-%       }
 
 \cproject
       {May - June 2015}
@@ -328,6 +318,20 @@
 \let\thefootnote\relax\footnote{Monsoon semester: July to November}
 \let\thefootnote\relax\footnote{Winter Semester: January to April}
 \section{Projects}
+
+\cproject
+    {Winter 2014-2015}
+    {Data Sensitive Hashing}
+    {\textsc{\raggedright Indexing and Searching Techniques in Databases}, Professor Arnab Bhattacharya}
+    {\href{https://github.com/srijanshetty/data-sensitive-hashing} {[GitHub]}}
+    {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Extended data sensitive hashing using standard Locality Sensitive Hashing extensions
+             to compare effectiveness.
+            \item Implemented entropy based dsh, and multiprobe dsh and analysed relative performance with
+             respect to dsh.
+        \end{itemize}
+    }
 
 \cproject
     {Winter 2013-2014}
