--- a/cv.tex
+++ b/cv.tex
@@ -301,6 +301,7 @@
                                     \textbf{Logic for Computer Science};
                                     \textbf{Fundamentals of Computing};
                                     \textbf{Introduction to Philosophy} \\
+    \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
