Graduated from IITK'

--- a/cv.tex
+++ b/cv.tex
@@ -137,7 +137,7 @@
                 \addfontfeature{LetterSpace=20.0}\fontsize{20}{20}\selectfont\scshape
                 Srijan R. Shetty
             }\\
-            \emph{Senior Undergraduate, Dept of Computer Science and Engineering}
+            \emph{Undergraduate, Dept of Computer Science and Engineering}
         }
 
         & {\Large\Letter} {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}\\
